feat: added configurable traffic randomness and traffic_seed
