# server/env_components/constants.py
@@ -10,6 +10,7 @@ INACTIVITY_TTL      = int(os.getenv("NPA_INACTIVITY_TTL", "600"))   # 10 min def
 GPU_TOTAL_BLOCKS = int(os.getenv("NPA_GPU_TOTAL_BLOCKS", "1000"))
 CPU_TOTAL_BLOCKS = int(os.getenv("NPA_CPU_TOTAL_BLOCKS", "5000"))
 TOKENS_PER_BLOCK = 16
+TRAFFIC_SEED = None
 
 CHATTER_RATIO = 0.80
 POWER_USER_RATIO = 0.20
